re PR c++/54086 (GCC should allow constexpr and const together)

PR c++/54086
	* decl.c (grokdeclarator): Allow const and constexpr together.

From-SVN: r191144